Tue Jul 11 13:38:10 UTC 2006  Steve Huston  <shuston@riverace.com>

        * ace/Message_Queue.inl: Include "ace/Guard_T.h" in the ACE_WIN32
          section to avoid compile errors with Release builds.

        * ace/TSS_T.h: Improved documentation.

        * tests/ACE_Init_TestDlg.cpp: Added comment block at the top to explain
          the file's purpose.

        * tests/Task_Test.cpp: Added a smoke test for the new
          ACE_Task::last_thread() method.

Thu Jul  6 12:48:58 UTC 2006  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * ace/OS_NS_sys_socket.inl (sendto): Initialize "bytes_sent" to 0
          to avoid random values.  Thanks to Winston Zhang <winston_ace at
          kubao-inc dot com> for reporting this.

Wed Jul  5 20:32:20 UTC 2006  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * ace/WFMO_Reactor.cpp (open): Added some more code to prevent
          memory leaks when the ACE_WFMO_Reactor is reopened.  Thanks to
          Sonicfly Zhou <zhoucn at txsec dot com> for this fix.

Tue Jul 11 12:19:23 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * etc/tao.doxygen:
          Added .idl to FILE_PATTERNS

Tue Jul 11 12:01:12 UTC 2006  Chad Elliott  <elliott_c@ociweb.com>

        * ace/Atomic_Op.cpp:
        * ace/Atomic_Op_Sparc.h:
        * ace/Atomic_Op_Sparc.c:
        * include/makeinclude/platform_sunos5_sunc++.GNU:

          Added a SPARC assembler implementation of functions needed for use
          within the ACE_Atomic_Op specializations.  The implementation will
          only be used if atomic_ops_sparc is set to 1 in
          platform_macros.GNU.  It also requires that v8plus or higher be
          used with SunCC.

        * ace/Makefile.am:
        * ace/ace.mpc:

          Added the new Atomic_Op_Sparc.c.

        * ace/CDR_Base.cpp:

          In grow(), call the clone_nocopy() method on the ACE_Data_Block
          with the new size.  Previously, the clone_nocopy() would be called